--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Типотека",
   "main": "./src/service/service.js",
   "scripts": {
-    "test": "npm run eslint",
+    "test": "npm run eslint && npm run jest",
+    "jest": "jest",
     "eslint": "eslint --ext .js src/",
     "start": "nodemon ./src/service/service.js --server 3000",
     "start-front-server": "nodemon ./src/express/express.js"
@@ -22,12 +23,17 @@
   "devDependencies": {
     "eslint": "8.7.0",
     "eslint-config-htmlacademy": "0.6.0",
-    "nodemon": "2.0.15"
+    "jest": "28.1.0",
+    "nodemon": "2.0.15",
+    "pino-pretty": "8.0.0",
+    "supertest": "6.2.3"
   },
   "dependencies": {
     "chalk": "4.1.2",
+    "cross-env": "7.0.3",
     "express": "4.17.3",
     "nanoid": "3.3.3",
+    "pino": "8.0.0",
     "pug": "3.0.2"
   }
 }
